--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,6 +1,6 @@
 .login-area {
     .side-menu{
-        margin-left:2vw;
+        // margin-left:2vw;
         height:100vh;
         padding-right:0px;
         background-color: #F2F5F8;
@@ -47,7 +47,7 @@
     height:100vh;
     padding:0px !important;
 }
-@media (max-width: 400px) {
+@media (max-width: 768px) {
     .hide-menu{
         display:none;
     }
