--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -38,7 +38,7 @@
     }
   }
   .menu {
-    height:73vh;
+    // height:73vh;
     display: inline-block;
     .nav-link {
       color: lightgray;
